--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Google sheet related information
+token.json
+credentials.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
