Allow main console script to be called by simply typing 'rpft'

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,6 @@ dependencies = [
 [project.urls]
 Homepage = "https://github.com/IDEMSInternational/rapidpro-flow-toolkit"
 Repository = "https://github.com/IDEMSInternational/rapidpro-flow-toolkit"
+
+[project.scripts]
+rpft = "rpft.cli:main"
