--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   pull_request:
     branches:
       - main
-
 jobs:
   build:
     strategy:
@@ -25,6 +24,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.version }}
+          cache: pip
       - name: Install dependencies
         run: |
           pip install --upgrade pip
