--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
           pip install --upgrade pip
           pip install .
       - name: Run unit tests
-        run: python -m unittest discover -s src
+        run: python -m unittest discover -s tests
