--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ dependencies = [
     "tablib[ods]>=3.1.0",
 ]
 
+[project.optional-dependencies]
+dev = ["pre-commit~=3.5"]
+
 [project.urls]
 Homepage = "https://github.com/IDEMSInternational/rapidpro-flow-toolkit"
 Repository = "https://github.com/IDEMSInternational/rapidpro-flow-toolkit"
