--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rpft"
-version = "1.1.3-dev.1"
+version = "1.2.0"
 description = "Toolkit for using spreadsheets to create and modify RapidPro flows"
 authors = [
     {name = "IDEMS International", email = "communications@idems.international"},
