--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rpft"
-version = "1.2.0"
+version = "1.3.0-dev0"
 description = "Toolkit for using spreadsheets to create and modify RapidPro flows"
 authors = [
     {name = "IDEMS International", email = "contact@idems.international"},
@@ -26,6 +26,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Text Processing :: General",
     "Topic :: Utilities",
 ]
