Relax requirements for pydantic and openpyxl dependencies
Different Python systems may have slightly different requirements, so we should
be flexible, and only constrain versions when absolutely necessary.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ dependencies = [
     "google-api-python-client~=2.6.0",
     "google-auth-oauthlib~=0.4.4",
     "networkx~=2.5.1",
-    "openpyxl~=3.0.7",
-    "pydantic~=1.10.14",
+    "openpyxl",
+    "pydantic < 2",
     "tablib[ods]>=3.1.0",
 ]
 
