--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "google-auth-oauthlib~=0.4.4",
     "networkx~=2.5.1",
     "openpyxl",
-    "pydantic < 2",
+    "pydantic >= 2",
     "tablib[ods]>=3.1.0",
 ]
 
