--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,11 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.9"
 keywords = ["rapidpro", "flow", "tools", "toolkit"]
-license = {text = "LGPL-2.1-or-later"}
+license = "LGPL-2.1-or-later"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
