--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,3 +71,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         repository-url: https://test.pypi.org/legacy/
+        verbose: true
