setup flowrunner in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,14 @@ jobs:
         with:
           python-version: ${{ matrix.version }}
           cache: pip
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: '1.25'
       - name: Install dependencies
         run: |
           pip install --upgrade pip
           pip install .
+          go install github.com/nyaruka/goflow/cmd/flowrunner@latest
       - name: Run unit tests
         run: python -m unittest discover -s tests
