--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,12 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          # - windows-latest
-          # - macos-latest
+          - windows-latest
+          - macos-latest
         version:
-          # - "3.10"
-          # - "3.11"
-          # - "3.12"
+          - "3.10"
+          - "3.11"
+          - "3.12"
           - "3.13"
     runs-on: ${{ matrix.os }}
     steps:
@@ -35,7 +35,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install .
-          go install github.com/nyaruka/goflow/cmd/flowrunner@latest
+          go install github.com/nyaruka/goflow/cmd/flowrunner@6b877f0
       - name: Verify Go environment variables
         run: |
           echo "GOPATH: $GOPATH"
