--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,14 +36,18 @@ jobs:
           pip install --upgrade pip
           pip install .
           go install github.com/nyaruka/goflow/cmd/flowrunner@6b877f0
-      - name: Verify Go environment variables
+      - name: Linux Verify Go environment variables
+        if: runner.os == 'Linux'
+        run: |      
+          # Check if the binary exists
+          ls -l "$(go env GOPATH)/bin/flowrunner"
+          echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
+
+      - name: Windows Verify Go environment variables
+        if: runner.os == 'Windows'
         run: |
           # Check if the binary exists
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            ls -l "$(go env GOPATH)/bin/flowrunner"
-          elif [ "$RUNNER_OS" == "Windows" ]; then
-            ls -l "$(go env GOPATH)/bin/flowrunner.exe"
-          fi
+          ls -l "$(go env GOPATH)/bin/flowrunner.exe"
           echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
       - name: Run unit tests
         run: python -m unittest discover -s tests
